Remove most content from Traditional_Pipeline.ipynb
The notebook was significantly trimmed, leaving only essential code and minimal examples. The removed sections primarily included detailed markdown explanations and visualizations, simplifying the file for focused usage.

--- a/notebooks/Traditional_Pipeline.ipynb
+++ b/notebooks/Traditional_Pipeline.ipynb
@@ -109,6 +109,8 @@
   {
    "cell_type": "code",
    "source": [
+    "planet = \"jupiter\" # @param [\"jupiter\", \"saturn\"] {'type': 'string'}\n",
+    "\n",
     "import sys\n",
     "sys.path.append(\"super-resolution-workshop\")\n",
     "\n",
@@ -125,8 +127,11 @@
     "from src.visualize_results import overlay_points\n",
     "from src.stacking import stack_by_quality\n",
     "\n",
-    "data = get_frames(\"super-resolution-workshop/data/jupiter_frames.avi\")\n",
-    "print(f\"Data loaded successfully!\")"
+    "if planet == \"jupiter\":\n",
+    "    data = get_frames(\"super-resolution-workshop/data/jupiter_frames.avi\")\n",
+    "else:\n",
+    "    data = get_frames(\"super-resolution-workshop/data/mars_frames.avi\")\n",
+    "print(f\"Data loaded successfully! Data contains {len(data)} images.\")"
    ],
    "metadata": {
     "colab": {
