Saved from Colab

--- a/notebooks/Traditional_Pipeline.ipynb
+++ b/notebooks/Traditional_Pipeline.ipynb
@@ -252,6 +252,31 @@
       "id": "r7y5LCvJBG4I"
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "<h2 style=\"color:#1f77b4\"> Dématriçage — détails sur les motifs et les méthodes</h2>\n",
+        "\n",
+        "Ce bloc explique les options du paramètre `pattern` et `method` utilisées par `debayer_stack(data, pattern=pattern, method=method)` et donne des recommandations pratiques pour l'astrophotographie.\n",
+        "\n",
+        "### Motifs CFA disponibles\n",
+        "- `RGGB`\n",
+        "- `GRBG`\n",
+        "- `GBRG`\n",
+        "- `BGGR`\n",
+        "\n",
+        "Observer l'effet d'utiliser le mauvais motif lors du traitement\n",
+        "\n",
+        "### Méthodes de dématriçage\n",
+        "- `Bilinear` : interpolation bilinéaire simple. Rapide, faible coût CPU, mais produit souvent du zippering et des fausses couleurs le long des contours. Usage : tests rapides, visualisation sommaire.\n",
+        "- `VNG` (Variable Number of Gradients) : choisit localement la meilleure direction d'interpolation en minimisant les gradients. Bon compromis pour préserver les bords et limiter les artefacts sur textures fines.\n",
+        "- `EA` (Edge‑Aware / AHD‑like) : algorithme orienté arêtes (ex. AHD) qui détecte la direction des bords et interpole en suivant ces directions pour réduire le zippering et conserver la netteté. Plus coûteux que bilinéaire, généralement meilleur sur zones à fort contraste.\n"
+      ],
+      "metadata": {
+        "id": "HTyt9O4EQWj2"
+      },
+      "id": "HTyt9O4EQWj2"
+    },
+    {
       "metadata": {
         "cellView": "form",
         "id": "67e0bff2a04ec319"
