--- a/notebooks/Traditional_Pipeline.ipynb
+++ b/notebooks/Traditional_Pipeline.ipynb
@@ -8,7 +8,7 @@
       "source": [
         "# Pipeline d'imagerie planétaire et astrophysique : empilement, calibration, affinage et couleur\n",
         "\n",
-        "Ce notebook propose un pipeline détaillé et reproductible pour passer de trames alignées et débayérisées à une image astronomique finalisée (principalement planétaire, avec remarques pour ciel profond). Il couvre la calibration instrumentale, la sélection et l'empilement robuste, la restauration (déconvolution / multi‑échelle), et l'amélioration colorimétrique d'images provenant du télescope. Chaque section explique le pourquoi, le comment et les paramètres usuels à surveiller.\n",
+        "Ce notebook propose un pipeline pour passer du teélescope à une image astronomique. Il couvre la calibration instrumentale, la sélection et l'empilement et l'amélioration colorimétrique d'images provenant du télescope. Chaque section explique le pourquoi, le comment et les paramètres à surveiller.\n",
         "\n",
         "---\n",
         "\n",
